- Added fifth parameter to openssl_encrypt()/openssl_decrypt()
  (string $iv) to use non-NULL IV.
  Made implicit use of NULL IV a warning. (Sara)
- Added openssl_cipher_iv_length(). (Sara)
- Added FastCGI Process Manager (FPM) SAPI. (Tony)
- Added recent Windows versions to php_uname and fix undefined windows 
  version support. (Pierre)

- Changed namespaced classes so that the ctor can only be named
  __construct now. (Stas)
- Reset error state in PDO::beginTransaction() reset error state. (Ilia)

- Implemented FR#35638 (Adding udate to imap_fetch_overview results).
  (Charles_Duffy at dell dot com )
- Fixed possible buffer overflows in mysqlnd_list_fields,  mysqlnd_change_user.
  (Andrey)
- Fixed possible buffer overflows when handling error packets in mysqlnd.
  Reported by Stefan Esser. (Andrey)
- Fixed very rare memory leak in mysqlnd, when binding thousands of columns.
  (Andrey)

- Fixed memory leak on error in mcrypt_create_iv on Windows. (Pierre)
- Fixed a possible crash because of recursive GC invocation. (Dmitry)
- Fixed a possible resource destruction issues in shm_put_var()
  Reported by Stefan Esser (Dmitry)
- Fixed a possible information leak because of interruption of XOR operator.
  Reported by Stefan Esser (Dmitry)
- Fixed a possible memory corruption because of unexpected call-time pass by
  refernce and following memory clobbering through callbacks.
  Reported by Stefan Esser (Dmitry)
- Fixed a possible memory corruption in ArrayObject::uasort() Reported by
  Stefan Esser (Dmitry)
- Fixed a possible memory corruption in parse_str(). Reported by Stefan Esser
  (Dmitry)
- Fixed a possible memory corruption in pack(). Reported by Stefan Esser
  (Dmitry)
- Fixed a possible memory corruption in substr_replace(). Reported by Stefan    
  Esser (Dmitry)
- Fixed a possible memory corruption in addcslashes(). Reported by Stefan    
  Esser (Dmitry)
- Fixed a possible stack exhaustion inside fnmatch(). Reported by Stefan    
  Esser (Ilia)