@@ -47,4 +47,4 @@ database handler: db4
 Test 1
 Success: db4 enabled
 Test 2 - full info
-.*Berkeley DB 4.*
+.*Berkeley DB (4|5).*
